<resources>
    <string name="app_name">RentRoom</string>
    <string name="bottom_home">Trang chủ</string>
    <string name="bottom_service">Dịch vụ</string>
    <string name="bottom_notification">Yêu thích</string>
    <string name="bottom_profile">Cá nhân</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="postdashboard">Quản lý bài đăng</string>
    <string name="findaplace">Tìm phòng trọ</string>
    <string name="findpeople">Tìm người ở chung</string>
    <string name="forrent">Đăng tin cho thuê</string>
    <string name="forrent_update">Cập nhật tin cho thuê</string>
    <string name="Recently">Mới đăng gần đây</string>
    <string name="Showmore">Xem thêm</string>
    <string name="Explore">Khám phá</string>
    <string name="title_info_post">Thông tin đăng bài</string>
    <string name="hoten">Họ và tên</string>
    <string name="sdt">Số điện thoại</string>
    <string name="btn_dangky">Đăng ký</string>
    <string name="btn_dangnhap">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="forgotpassword">Quên mật khẩu?</string>
    <string name="textview_dangky">Chưa có tài khoản?</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="txtviewdangnhap">Đã có tài khoản?</string>
    <string name="lichhen">Lịch hẹn xem phòng</string>
    <string name="quanlyphong">Quản lý phòng</string>
    <string name="chinhsuataikhoan">Chỉnh sửa tài khoản</string>
    <string name="capnhat">Cập nhật</string>
    <string name="default_web_client_id">788411668486-ovl0444bqj11oh4tjhuqs30eoimmv1kd.apps.googleusercontent.com</string>
    <string name="confirm">Phản hồi</string>
    <string name="confirmed">Đã xác nhận</string>
    <string name="refuse">Đã từ chối</string>
    <string name="send">Đã gửi</string>
    <string name="Search">Tìm kiếm...</string>

    <string name="facebook_app_id">1093262142482244</string>
    <string name="fb_login_protocol_scheme">fb1093262142482244</string>
    <string name="facebook_client_token">23ac5f16f915c119404ab4a260b52225</string>

    <!-- Schedule Visit Status -->
    <string name="reject">Từ chối</string>
    <string name="cancel">Hủy</string>

    <!-- Schedule Visit Dialog -->
    <string name="confirmation">Xác nhận lịch hẹn</string>
    <string name="confirm_schedule_message">Bạn có muốn xác nhận lịch hẹn này không?</string>
    <string name="schedule_approved">Đã xác nhận lịch hẹn</string>
    <string name="schedule_rejected">Đã từ chối lịch hẹn</string>

    <!-- Schedule Visit Details -->
    <string name="detail_schedule_title">Chi tiết lịch hẹn</string>
    <string name="phone_number">Số điện thoại: %s</string>
    <string name="visit_time">Thời gian xem: %s</string>
    <string name="note">Ghi chú: %s</string>

</resources>