<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_timphongtro" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/txtemail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text=""
            android:paddingStart="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matkhau"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/txtpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/matkhau"
            android:inputType="textPassword"
            android:text=""
            android:paddingStart="20dp"/>

        <Button
            android:id="@+id/btnDangnhap"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@drawable/background_btn"
            android:text="@string/btn_dangnhap" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/imgGoogleSignin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_google" />

            <ImageView
                android:id="@+id/imgFacebookSignin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/imgGuest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_user_khach" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotpassword"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_orange_light" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_dangky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/textview_dangky"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textviewDangky"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_dangky"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>